--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="АТ КОММОД – терминал на рынке нефтепродуктов России">
     <meta name="keywords" content="Коммод, аналитика нефтепродуктов, биржа спбмтсб, спбмтсб ход торгов">
     <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="stylesheet" href="./css/mediaAdpat.css">
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
